В процессе работы над отображением управляющих кнопок...

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                  <button id="react" data-topic="JavaScript" class="btn">Javascript</button>
                  <button id="js"  data-topic="React" class="btn">React</button>
             </div>
-                 <button id="random" data-topic="Случайный вопрос" class="btn long_btn">Случайный вопрос</button>
+                 <button id="random" data-topic="Случайный вопрос" class="btn long_btn">Вопрос по случайной теме</button>
         </div>
 
         <div class="display">
@@ -28,11 +28,12 @@
             <div id="display_text" class="display_text"></div>
 
             <div class="question_variables">
-                <div class="variables_btns">
-                    <button id="a" class="variables_btn" >вариант a</button>
+                <div id="variables_btns" class="variables_btns">
+                    <!-- <button id="a" class="variables_btn" >вариант a</button>
                     <button id="b" class="variables_btn" >вариант b</button>
                     <button id="c" class="variables_btn" >вариант c</button>
-                    <button id="d" class="variables_btn" >вариант d</button>
+                    <button id="d" class="variables_btn" >вариант d</button> -->
+                    <!-- <button id="getAnswer" class="variables_btn">Получить ответ</button> -->
                 </div>
             </div>
 
