Частично выполнен адаптив...

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Страница для подготовки к собеседованиям</h1>
+    <h1 class="page__title">Страница для подготовки к собеседованиям</h1>
 
     <div class="wrapper">
         <div class="btns">
